<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.onboard.OnBoardActivity">

    <TextView
        android:id="@+id/tv_brand_name"
        style="@style/title.large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_on_board"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_dot_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_brand_name" />

    <TextView
        android:id="@+id/btn_skip"
        style="@style/title.medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/skip"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_dot_indicator"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/di_on_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dotsColor="?attr/colorPrimary"
            app:dotsSize="14dp"
            app:dotsSpacing="6dp"
            app:dotsStrokeColor="?attr/colorOnPrimary"
            app:dotsStrokeWidth="1.5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        style="@style/button.small"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/mulai"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/ll_dot_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ll_dot_indicator" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/bg_circle_button"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/ll_dot_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ll_dot_indicator" />

</androidx.constraintlayout.widget.ConstraintLayout>